# tim

./: makefile  pyproject.toml
src/tim/: __init__.py  __main__.py  __meta__.py
src/tim/system/: __init__.py  csv.py  filesystem.py  filesystem_wrapper.py
